fix: replace nolint:gosec directives with proper code fixes
- G115: add bounds checks for integer conversions instead of suppressing
- G404: use crypto/rand instead of math/rand/v2 for audit sampling
- G108/G704: configure gosec excludes in .golangci.yaml for intentional
  pprof import and validated-URL SSRF false positives
- Remove stale nolint:gocognit after reducing nesting complexity
- Clean up stale nolint:gosec from config.go bodyclose directives

--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -155,6 +155,11 @@ linters:
 
   # All settings can be found here https://github.com/golangci/golangci-lint/blob/HEAD/.golangci.reference.yml
   settings:
+    gosec:
+      excludes:
+        - G108 # Profiling endpoint — pprof import is intentional in profiler package
+        - G704 # SSRF via taint analysis — URLs are validated by util.ValidateHTTPURL before use
+
     cyclop:
       # The maximal code complexity to report.
       # Default: 10
